fix text align right and add main-sun to contrain the max width on 50em

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -154,6 +154,8 @@ $size-header-pad: 4em;
 
 	p {
 		margin: 0 0 _size(element-margin) 0;
+		text-align: justify;
+		text-justify: inter-word;
 	}
 
 	h1, h2, h3, h4, h5, h6 {
@@ -1161,6 +1163,26 @@ $size-header-pad: 4em;
 	#main {
 		margin-left: $size-header-width;
 		max-width: 70em + $size-header-pad;
+		padding: ($size-header-pad * 2) $size-header-pad $size-header-pad $size-header-pad;
+		width: calc(100% - #{$size-header-width});
+
+		> section {
+			border-top: solid 2px _palette(border);
+			margin: $size-header-pad 0 0 0;
+			padding: $size-header-pad 0 0 0;
+
+			&:first-child {
+				border-top: 0;
+				margin-top: 0;
+				padding-top: 0;
+			}
+		}
+	}
+/* Main-sub */
+
+	#main-sub {
+		margin-left: $size-header-width;
+		max-width: 50em + $size-header-pad;
 		padding: ($size-header-pad * 2) $size-header-pad $size-header-pad $size-header-pad;
 		width: calc(100% - #{$size-header-width});
 
